--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -10,8 +10,8 @@
   <body>
     <p class="odd_number">Number 1 - I'm a class!</p>
     <div id="el1">Number 2 - I'm one ID.</div>
-    <p class="odd_number cooler">Number 3 - I'm a class, but cooler!</p>
-    <div id="el2">Number 4 - I'm another ID.</div>
+    <p class="odd_number adjust-font">Number 3 - I'm a class, but cooler!</p>
+    <div id="el2" class="adjust-font">Number 4 - I'm another ID.</div>
     <p class="odd_number">Number 5 - I'm a class!</p>
   </body>
 </html>
